Added getResourceURI and getResourceFilePath methods to UimaContext and AnnotatorContext.  Also added test cases. UIMA-132: http://issues.apache.org/jira/browse/UIMA-132
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@491103 13f79535-47bb-0310-9956-ffa450edef68